package com.mygdx.game.entity;

public interface BehaviourManager<E> {
    E moveFallingObject();
}
